# claude-agent-sdk-demo

./: .gitignore  README.md  agent_runtime.py  agent_worker.py  app.py  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: log_instructions_loaded.py
.claude/rules/: python-backend.md
static/css/: app.css
static/js/: app.js
templates/: index.html
tests/: test_agent_worker.py
