[project]
name = "claude-agent-sdk-demo"
version = "0.1.0"
description = "Minimal demo for the published Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.50",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
